# daebbang-api/src/main/java/com/daebbang/daebbangapi/domain/order/dto/request/OrderItemRequest.java
@@ -1,0 +1,14 @@
+package com.daebbang.daebbangapi.domain.order.dto.request;
+
+import com.daebbang.daebbangcore.domain.order.command.OrderItemCommand;
+import jakarta.validation.constraints.Min;
+import jakarta.validation.constraints.NotNull;
+
+public record OrderItemRequest(
+    @NotNull Long productDetailId,
+    @Min(1) int quantity
+) {
+    public OrderItemCommand toCommand() {
+        return new OrderItemCommand(productDetailId, quantity);
+    }
+}
